start/stop hightlight, rotate alignment fixed

--- a/RailwayEssential/RailwayEssentialWeb/Resources/Webeditor/css/base.css
+++ b/RailwayEssential/RailwayEssentialWeb/Resources/Webeditor/css/base.css
@@ -114,6 +114,7 @@ div {
     -ms-transform-origin: left bottom;
     -o-transform-origin: left bottom;
     transform-origin: left bottom;
+    height: 31px;
 }
 
 .rot180 {
@@ -128,8 +129,17 @@ div {
     -ms-transform-origin: left bottom;
     -o-transform-origin: left bottom;
     transform-origin: left bottom;
+    height: 31px;
+}
+
+.routeHighlightStart {
+    background: chartreuse;
+}
+
+.routeHighlightEnd {
+    background: crimson;
 }
 
 .routeHighlight {
-    background: chartreuse;
+    background: gold;
 }
